--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.17",
     "@heroicons/vue": "^2.1.1",
+    "@vueuse/core": "^10.7.2",
     "bootstrap-icons": "^1.11.3",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
