--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
     "@headlessui/vue": "^1.7.17",
     "@heroicons/vue": "^2.1.1",
     "@vueuse/core": "^10.7.2",
+    "axios": "^1.6.7",
     "bootstrap-icons": "^1.11.3",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
