Add more config stuff

--- a/Backend/FileshareBackend/appsettings.json
+++ b/Backend/FileshareBackend/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "DirectoryRootPath": "/home/austind/Documents/testDir/"
+  "DirectoryRootPath": "/home/austind/Documents/testDir/",
+  "Database_ConnectionString": "Data Source=/home/austind/Code/Data/FileShareData/fileshare.sqlite"
 }
