--- a/Backend/FileshareBackend/appsettings.json
+++ b/Backend/FileshareBackend/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "DirectoryRootPath": "/home/austind/Documents/",
+  "DirectoryRootPath": "/home/austind/Documents",
   "Database_ConnectionString": "Data Source=/home/austind/Code/Data/FileShareData/fileshare.sqlite"
 }
