--- a/Backend/FileshareBackend/FileshareBackend.csproj
+++ b/Backend/FileshareBackend/FileshareBackend.csproj
@@ -10,7 +10,8 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
+        <PackageReference Include="MimeTypeMapOfficial" Version="1.0.17" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
 
     <ItemGroup>
