--- a/Backend/FileshareBackend/appsettings.json
+++ b/Backend/FileshareBackend/appsettings.json
@@ -6,6 +6,13 @@
     }
   },
   "AllowedHosts": "*",
-  "DirectoryRootPath": "/home/austind/Documents",
-  "Database_ConnectionString": "Data Source=/home/austind/Code/Data/FileShareData/fileshare.sqlite"
+  "DirectoryRootPath": "/home/austind/Documents/testDir",
+  "Database_ConnectionString": "Data Source=/home/austind/Code/Data/FileShareData/fileshare.sqlite",
+  "Jwt" : {
+    "Key": "<Change Me>",
+    "Issuer" : "<Change Me>",
+    "Audience" : "<Change Me>",
+    "Secure" : "false"
+  },
+  "SSM" : "Lax"
 }
