--- a/Backend/FileshareBackend/appsettings.json
+++ b/Backend/FileshareBackend/appsettings.json
@@ -12,7 +12,7 @@
     "Key": "<Change Me>",
     "Issuer" : "<Change Me>",
     "Audience" : "<Change Me>",
-    "Secure" : "false"
+    "Secure" : "true"
   },
-  "SSM" : "Lax"
+  "SSM" : "None"
 }
