--- a/Backend/FileshareBackend/appsettings.json
+++ b/Backend/FileshareBackend/appsettings.json
@@ -7,12 +7,12 @@
   },
   "AllowedHosts": "*",
   "DirectoryRootPath": "/home/austind/Documents/testDir",
-  "Database_ConnectionString": "Data Source=/home/austind/Code/Data/FileShareData/fileshare.sqlite",
+  "Database_ConnectionString": "Data Source=/home/austind/DataGripProjects/FileShareData/fileshare.sqlite",
   "Jwt" : {
     "Key": "<Change Me>",
     "Issuer" : "<Change Me>",
     "Audience" : "<Change Me>",
     "Secure" : "true"
   },
-  "SSM" : "None"
+  "SSM" : "Lax"
 }
