--- a/Backend/FileshareBackend/appsettings.json
+++ b/Backend/FileshareBackend/appsettings.json
@@ -5,14 +5,19 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "DirectoryRootPath": "/home/austind/Documents/testDir",
-  "Database_ConnectionString": "Data Source=/home/austind/DataGripProjects/FileShareData/fileshare.sqlite",
+  "GeneralSettings" : {
+    "AllowedHosts": "*",
+    "DirectoryRootPath": "/home/austind/Documents/testDir",
+    "DatabaseConnectionString": "Data Source=/home/austind/Code/Data/FileShareData/fileshare.sqlite",
+    "AllowNewAccounts": true
+  },
   "Jwt" : {
     "Key": "<Change Me>",
+    "RKey": "<Change Me",
     "Issuer" : "<Change Me>",
     "Audience" : "<Change Me>",
-    "Secure" : "true"
-  },
-  "SSM" : "Lax"
+    "Secure" : "true",
+    "SSM" : "Lax"
+  }
+  
 }
