--- a/Backend/FileshareBackend/appsettings.json
+++ b/Backend/FileshareBackend/appsettings.json
@@ -8,8 +8,7 @@
   "GeneralSettings" : {
     "AllowedHosts": "*",
     "DirectoryRootPath": "/home/austind/Documents/testDir",
-    "DatabaseConnectionString": "Data Source=/home/austind/Code/Data/FileShareData/fileshare.sqlite",
-    "AllowNewAccounts": true
+    "DatabaseConnectionString": "Data Source=/home/austind/Code/Data/FileShareData/fileshare.sqlite"
   },
   "Jwt" : {
     "Key": "<Change Me>",
@@ -20,7 +19,7 @@
     "SSM" : "Lax"
   },
   "FrontendSettings" : {
-    
+    "AllowNewAccounts": true
   }
   
 }
