--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,8 @@
     "@vueuse/core": "^10.7.2",
     "axios": "^1.6.7",
     "bootstrap-icons": "^1.11.3",
+    "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
